    another problem. The node became Alive again when the PINGCHECKER said OK
    BUT there was another error to resolve.
  - Bugfix: The feature CHECK_NODES_WITH_RUNNING_JOB=yes never worked before.
  - Speedup monika (X5).
  - Monika: Add the conf max_cores_per_line to have several lines if the number
    of cores are too big.
  - Minor changes into API:
      - added cmd_output into POST /jobs

version 2.5.1:
--------------
  - Sources directories reorganized
  - New "Phoenix" tool to try to reboot automatically broken nodes
    (to setup into /etc/oar/oar_phoenix.pl)
  - New (experimental!) scheduler written in Ocaml
  - Cpusets are activated by default
  - Bugfix #11065: oar_resource_init fix (add a space)
  - Bug 10999: memory leak into Hulot when used with postgresql. The leak has been
    minimized, but it is still there (DBD::Pg bug)
  - Almighty cleans ipcs used by oar on exit 
  - Bugfix #10641 and #10999 : Hulot is automatically and periodically restarted
  - Feature request #10565: add the possibility to check the aliveness of the
    nodes of a job at the end of this one (pingchecker) 
  - REST API heavily updated: new data structures with paginated results, desktop
    computing functions, rspec tests, oaradmin resources management, admission
    rules edition, relative/absolutes uris fixed
  - New ruby desktop computing agent using REST API (experimental)
  - Experimental testsuite
  - Poar: web portal using the REST API (experimental)
  - Oaradmin YAML export support for resources creation (for the REST API)
  - Bugfix #10567: enabling to bypass window mechanism of hulot.
  - Bugfix #10568: Wake up timeout changing with the number of nodes
  - Add in oar.conf the tag "RUNNER_SLIDING_WINDOW_SIZE": it allows the runner
    to use a sliding window to launch the bipbip processes if
    "DETACH_JOB_FROM_SERVER=1". This feature avoids the overload of the server
    if plenty of jobs have to be launched at the same time.